Update configuration files and .gitignore settings
- Added `appsettings.json` to .gitignore to prevent tracking.

--- a/DiscusslyApi/Exampleappsettings.json
+++ b/DiscusslyApi/Exampleappsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DiscusslyApiContext": "Server=.\\SQLEXPRESS; Database=Discussly; Trusted_Connection=True; Encrypt=false" // test server before deploying
+    "DiscusslyApiContext": "Server=.\\SQLEXPRESS; Database=Discussly; Trusted_Connection=True; Encrypt=false" // sql server 
   }
 }
